minor word changes and discussion structure

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -68,7 +68,7 @@
 % online Methods separate
 
     \paragraph{}
-    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be realised when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, though potential applications of this framework extend beyond biological systems.}
+    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be empirically observable when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, though potential applications of this framework extend beyond ecological systems.}
 
 
 
@@ -93,7 +93,7 @@
     In many systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities have rarely been found to match empirical estimates of interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
-    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenoligical and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system. Such methods can quickly become data intensive and computationally complex however as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: their components are typically unevenly abundant and distributed with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis irregardless of the role they might play. Empirically quantifying interaction matrices for diverse systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system. Such methods can quickly become data intensive and computationally complex however as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: their components are typically unevenly abundant and distributed with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis irregardless of the role they might play. Empirically quantifying interaction matrices for diverse systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
     \paragraph{} % I'm not sur this paragraph will be necessary ... but it will need a little bit more work if I include it.
@@ -121,12 +121,12 @@
         To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological community, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of a component - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring components in a neighbour-density dependant model (NDDM). This model was applied to a dataset of a diverse annual wildflower community, where components consisted of 22 focal species and up to 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution. Increases or decreases in an overall species' performance (here, seed production) can thus be attributed to neighbouring components/species which were observed to co-occur. The resulting interaction effects can be competitive or facilitative, non-symmetrical (the effect of species $i$ on $j$ does not necessarily match the effect of species $j$ on $i$) and include intraspecific effects (the effect of species $i$ on itself). The shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (linear, exponential, rectangular hyperbolic) and should be carefully verified before implementation. 
 
     \paragraph{}
-        Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. As is common in ecological communities, rare species may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are not as likely to be found. This species may still however potentially interact with many of the other species in the system if given the opportunity to do so. Rather than assigning a 0 value to this unknown interaction, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we assume that unrealised interactions can be simplified such that components typically have a singular impact on and a singular response to neighbours independant of neighbour identity. An unrealised interaction is therefore the product of two components' impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each component's effects on other neighbours, whilst the response and impact model (RIM) applies only to those unrealised interactions. 
+        Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. As is common in ecological communities, rare species may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are not as likely to be found. This species may still however potentially interact with many of the other species in the system if given the opportunity to do so. Rather than assigning a 0 value to these unknown interactions, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we assume that unrealised interactions can be simplified such that components typically have a singular impact on and a singular response to neighbours independant of neighbour identity. An unrealised interaction is therefore the product of two components' impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each component's effects on other neighbours, whilst the response and impact model (RIM) applies only to those unrealised interactions. 
 
     \subsection{Parameter estimation and validation}
 
     \paragraph{}
-        The joint model was first applied to simulated data to verify that the original interaction parameters could be recovered by this framework (Figure ?). Applying it to the empirical wildflower dataset allowed us to provide estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which only 60\% were observed (realised).  When accounting for focal species only, 13.6\% of interactions were estimated by the RIM. NDDM and RIM estimates matched well and followed similar distributions (Figure \ref{fig:adist}) as enforced by the framework. [NOTE: I haven't done the simulated data yet but should because reviewers will ask for it]. 
+        The joint model was first applied to simulated data to verify that the original interaction parameters could be recovered by this framework. Applying it to the empirical wildflower dataset allowed us to provide estimates for all 1144 interactions between those 22 focal species and 52 neighbouring species, of which only 60\% were observed (realised).  When accounting for focal species only, 13.6\% of interactions were estimated by the RIM. NDDM and RIM estimates matched well and followed similar distributions (Figure \ref{fig:adist}) as enforced by the framework. 
 
     \paragraph{}
         In order to allow a seamless integration between the NDDM and RIM and for both models to contribute to the likelihood, the joint model framework was written in the STAN programming language which uses Bayesian estimation methods. This approach is also more robust to the inclusion of many interactions without running as much risk of overparameterisation, and returns parameter estimates as distributions rather than point estimates, allowing for easy inclusion of uncertainty in the analysis of results. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our parameter estimates. We conducted a posterior predictive check comparing simulated seed density to observed values (Figure \ref{fig:ppcheck}), this is especially important for verifying that the appropriate distribution and link function is being used for the data at hand. [MOVE THIS PARAGRAPH? or restructure this and previous paragraph]
@@ -240,56 +240,37 @@
 
 
     \paragraph{} 
-    The framework presented here allows the estimation of diverse interaction matrices from horizontal community data. Given individual observations of performance and the identity of the local neighbourhood, our model uses Bayesian regression to quantify the competitive or facilitative effects of one component on another and vice versa. This method opens possibilities for many types of applications depending on the system chosen.
+    The framework presented here allows the estimation of diverse interaction matrices from horizontal community data. Given individual observations of performance and the identity of the local neighbourhood, our model uses Bayesian regression to quantify the competitive or facilitative effects of one component on another and vice versa. Several aspects of our model and its implementation allow us to better capture complex features of ecological communities compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks however, interactions in our model are estimated from species effects on each other's performance.  This method opens possibilities for many types of applications depending on the system chosen.
 
-    \paragraph{}
-    In ecology, interactions within a single trophic level are often difficult to observe, which means they are often quantified through other means \parencite{}. Unfortunately, these often require... 
 
-    \paragraph{}
-    Application of this framework to ecological setting: understanding diversity, importance of certain nodes etc. 
+    % % Move to end of Discussion? / Conclusion
 
-    \paragraph{}
-    The application of this framework is not limited to ecological systems however, and can be used to 
-
-    % % PARAGRAPH MOVED FROM INTRODUCTION
-    % There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions, but non-trophic interactions such as those occurring between plants are largely neglected \parencite{Ellison2019}. This is unfortunate, as recent work indicates that non-trophic interactions and plant diversity alter food web structure, stability and diversity-functioning relationships \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}. Integrating plant and trophic networks remains a key challenge in improving our understanding of community dynamics and persistence \parencite{Godoy2018c}. 
-
-    % \subsection{Interaction matrices for diverse communities}
-
-    \paragraph{} % DELETE?
-    The model framework we present here quantifies pair-wise interaction strengths between components from diverse horizontal community data. Several aspects of our model and its implementation allow us to better capture complex features of ecological communities compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks however, interactions in our model are estimated from species effects on each other's performance. By couching our results into a model of population dynamics, we can go even further and capture how interactions may directly affect species abundances, rather than spatial association patterns. 
-
-    % \paragraph{} % MOVE TO RESULTS?
-    % The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from the pair-wise interactions that are observed. Because they are estimated from observed interactions previously quantified by the IFM, the response and effect parameters are constrained such that their product follows a similar distribution to that of the observed interactions (Figure \ref{fig:adist}). The Bayesian implementation means that parameters are estimated using MCMC algorithms, which amongst many benefits can estimate more parameters than with more commonly used frequentist approaches \parencite{Dorazio2016}. This approach also returns parameter estimates as posterior distributions rather than simple mean and standard deviations. By having access to the full distribution of likely values for every interaction, we can draw samples of likely networks from these distributions and thus easily incorporate some measure of variation and uncertainty around interaction values. 
 
     % \paragraph{} % MAYBE? 
     % Discuss the scaling and wide potential uses for it? 
 
-    \subsection{Limitations}
-        
-        \paragraph{}
-        Though our framework does provide a way of estimating interactions between system components which are not observed to cooccur, care should be taken that these unrealised interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones, and the more reliable those observed estimates are. It is also important to consider the likely reasons for missing interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing season never overlaps in the field. This type of interaction would be assigned a 0 value. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
-
-        \paragraph{}
-        Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial as we do not recommend fewer than 20 observations per focal species. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of interest however, data-collection can simply be focused on amassing observations of focal individuals from those rarer species to be able to estimate these interaction strengths.   
-
-
+ 
     % \subsection{Applications to ecosystem management}
 
-    %     \paragraph{}
-    %     Interaction networks provide a unique lens with which to examine an ecological community. By describing how species are linked, networks can for example be used to evaluate ecosystem response to human-altered landscapes and guide future management decisions \parencite{Ross2011} or explore how communities may respond to global warming \parencite{Gorman2019}. Specifically, couching species-rich interaction matrices into models of population dynamics allow us to compare how community dynamics may affect and respond to individual species. This can direct ecosystem management efforts such as prioritising certain species to conserve, or eradicating invasives which are disruptful to native species community dynamics.
+    \paragraph{}
+    Interaction networks provide a unique lens with which to examine an ecological community. By describing how species are linked, networks can for example be used to evaluate ecosystem response to human-altered landscapes and guide future management decisions \parencite{Ross2011} or explore how communities may respond to global warming \parencite{Gorman2019}. Specifically, couching species-rich interaction matrices into models of population dynamics allow us to compare how community dynamics may affect and respond to individual species. This can direct ecosystem management efforts such as prioritising certain species to conserve, or eradicating invasives which are disruptful to native species community dynamics. 
+
+    [MERGE THE FOLLOWING 3 PARAGRAPHS]
+
+    \paragraph{}
+    Certain species play important roles in the community which can be deduced from their position in the interaction network \parencite{Cirtwill2018a}. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community \parencite{Power1996}. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on other species population dynamics \parencite{Ellison2019}. Figure \ref{fig:species}.A. identifies several contenders for keystone (orange diamonds) or foundation (blue diamonds) species status based on their community abundance and net interaction effects across all neighbours. Likewise, the integration of exotic species into native communities can also be evaluated using interaction networks. In our case study, two out of three exotic species (red diamonds in Fig. \ref{fig:species}) were extremely abundant but had substantially different effects on neighbours, with the grass \textit{Pentameris airoides} facilitating some species, whereas \textit{Arctotheca calendula} had almost exclusively competitive effects on all other neighbours (Fig. \ref{fig:species}.B.). These examples are not exhaustive, but serve to illustrate how interaction matrices can help us understand what roles specific species play within a community. 
     %     % Because some species have stronger effects on other species abundances and are more crucial to the maintenance of biodiversity, management efforts can be prioritised towards their conservation. 
 
     %         \paragraph{} % MOVED FROM RESULTS
-    %         One potential use for translating interaction estimates into per-capita interaction strengths is to identify species of particular importance to the healthy functioning of the whole community. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community \parencite{Power1996}. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on other species population dynamics \parencite{Ellison2019}. Figure \ref{fig:species}.A. identifies several contenders for keystone (orange diamonds) or foundation (blue diamonds) species status based on their community abundance and net interaction effects across all neighbours. Likewise, the integration of exotic species into native communities can also be evaluated using interaction networks. In our case study, two out of three exotic species (red diamonds in Fig. \ref{fig:species}) were extremely abundant but had substantially different effects on neighbours, with the grass \textit{Pentameris airoides} facilitating some species, whereas \textit{Arctotheca calendula} had almost exclusively competitive effects on all other neighbours (Fig. \ref{fig:species}.B.). These examples are not exhaustive, but serve to illustrate how interaction matrices can help us understand what roles specific species play within a community. 
+    %         One potential use for translating interaction estimates into per-capita interaction strengths is to identify species of particular importance to the healthy functioning of the whole community. 
 
 
-    %     \paragraph{}
-    %     Certain species play important roles in the community which can be deduced from their position in the interaction network \parencite{Cirtwill2018a}. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species \parencite{Mills1993}, often leading to secondary extinctions when they are removed from a network. Their influence on the abundance of other species and wider community dynamics is disproportionately high compared to their biomass \parencite{Power1996, Piraino2002, Libralato2006}, which allows easy identification of potential keystone species from our network results (Fig. \ref{fig:species}) though further tests are recommended for validation. Foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \parencite{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. Identifying keystone, foundation and other important types of species roles is helpful for maintaining biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.
+         \paragraph{}
+     Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species \parencite{Mills1993}, often leading to secondary extinctions when they are removed from a network. Their influence on the abundance of other species and wider community dynamics is disproportionately high compared to their biomass \parencite{Power1996, Piraino2002, Libralato2006}, which allows easy identification of potential keystone species from our network results (Fig. \ref{fig:species}) though further tests are recommended for validation. Foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \parencite{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. Identifying keystone, foundation and other important types of species roles is helpful for maintaining biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.
     %     % [The two species were \textit{Gilberta tenuifolia} and \textit{Haloragis odontocarpa} in case that's interesting.]
 
-    %     \paragraph{}
-    %     Network approaches can also be used to evaluate how specific species are integrated within the community. Our case study for example illustrates how different exotic species can have widely varying competitive and facilitative effects on neighbours (Fig. \ref{fig:species}). Though many invasive species compete with natives \parencite{Naeem2000, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. Alternatively, threatened species could also benefit from this type of analysis. Recent work suggests rare species are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants \parencite{Calatayud2019, Hines2020}. Identifying neighbouring species which facilitate and increase the local abundance of rarer, endangered target species is one of many strategies which could help guide conservation management.
+    \paragraph{}
+    Network approaches can also be used to evaluate how specific species are integrated within the community. Our case study for example illustrates how different exotic species can have widely varying competitive and facilitative effects on neighbours (Fig. \ref{fig:species}). Though many invasive species compete with natives \parencite{Naeem2000, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. Alternatively, threatened species could also benefit from this type of analysis. Recent work suggests rare species are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants \parencite{Calatayud2019, Hines2020}. Identifying neighbouring species which facilitate and increase the local abundance of rarer, endangered target species is one of many strategies which could help guide conservation management.
 
 
     % \subsection{Understanding community diversity and stability}
@@ -316,6 +297,18 @@
     % ie. improving our estimates \\
     % - improving our knowledge of networks, developing tools for plant networks and tools that can deal with non-sparse networks, competitive and facilitative interactions \\
     % - integrate with trophic networks (which appear to be sensitive to producer/plant network structure!)\\
+   \subsection{Limitations}
+        
+        \paragraph{}
+        Though our framework does provide a way of estimating interactions between system components which are not observed to cooccur, care should be taken that these unrealised interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones, and the more reliable those observed estimates are. It is also important to consider the likely reasons for missing interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing season never overlaps in the field. This type of interaction would be assigned a 0 value. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
+
+        \paragraph{}
+        Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial as we do not recommend fewer than 20 observations per focal species. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of interest however, data-collection can simply be focused on amassing observations of focal individuals from those rarer species to be able to estimate these interaction strengths.   
+
+\section{Conclusion}
+
+    \paragraph{} 
+    There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions, but non-trophic interactions such as those occurring between plants are largely neglected \parencite{Ellison2019}. This is unfortunate, as recent work indicates that non-trophic interactions and plant diversity alter food web structure, stability and diversity-functioning relationships \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}. Integrating plant and trophic networks remains a key challenge in improving our understanding of community dynamics and persistence \parencite{Godoy2018c}. By providing a method whith which to estimate interactions in horizontal systems, we hope to help empiricists who would like to ...
 
 
     
